- updated deps - added samesite and secure options to CookiePrompt.jsx - added SEO specific text on landing page - fixed GA opt out toast being overlapped through navbar - changed main content area to be <main/>

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,7 +11,7 @@
   left: 0;
   position: fixed;
   right: 0;
-  z-index: 1070;
+  z-index: 1001;
   background: white;
 }
 
